[gd_scene load_steps=6 format=3 uid="uid://dxfwxs8uult8l"]

[ext_resource type="Script" path="res://scenes/main/collection_selector_ui.gd" id="1_lgubk"]
[ext_resource type="Theme" uid="uid://dnh285uknn4tk" path="res://themes/default_ui.tres" id="1_usoo5"]
[ext_resource type="Texture2D" uid="uid://5rm45lov2e7o" path="res://assets/ui/icons/navigate_before_64dp_F5F5F5.svg" id="2_rowe7"]
[ext_resource type="Texture2D" uid="uid://wapg2jl0dxga" path="res://assets/ui/icons/navigate_next_64dp_F5F5F5.svg" id="3_e5e34"]
[ext_resource type="Texture2D" uid="uid://t0yf7n57awy5" path="res://scenes/collection/rosendal_plains_2_4k.png" id="3_ly6l7"]

[node name="CollectionSelectorUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_usoo5")
script = ExtResource("1_lgubk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_ly6l7")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25)

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/TextureRect/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PanelContainer2" type="PanelContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Artivact XR"
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="DescriptionLabel" type="Label" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Visit virtual collections of scanned 3D objects!"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileSizeLabel" type="Label" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "12.34 GB"

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Left" type="PanelContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="PreviousCollectionButton" type="Button" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Left"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Previous"
icon = ExtResource("2_rowe7")
alignment = 0

[node name="Center" type="PanelContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="PanelContainer" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="NextCollectionButton" type="Button" parent="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Right"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Next"
icon = ExtResource("3_e5e34")
icon_alignment = 2

[connection signal="pressed" from="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Left/PreviousCollectionButton" to="." method="previous_collection_info"]
[connection signal="pressed" from="Panel/MarginContainer/TextureRect/ColorRect/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Right/NextCollectionButton" to="." method="next_collection_info"]
